@@ -7,8 +7,8 @@ SET(BRANDING_PROJECT_BUILD_TYPE_VERSION "alfa" CACHE STRING "Build version type 
   #possible variables: alfa, beta, rc, release
 
 SET(BRANDING_PROJECT_DOMAIN "https://www.fastonosql.com" CACHE STRING "Branding domain url for ${BRANDING_PROJECT_NAME}") #default
-SET(BRANDING_PROJECT_DOWNLOAD_LINK "https://fastonosql.com/download" CACHE STRING "Branding download root url for ${BRANDING_PROJECT_NAME}")
-SET(BRANDING_PROJECT_DOWNLOAD_DIRECT_LINK "https://fastonosql.com/downloads" CACHE STRING "Branding downloads root url for ${BRANDING_PROJECT_NAME} packages")
+SET(BRANDING_PROJECT_DOWNLOAD_LINK "https://fastonosql.com/login" CACHE 
+STRING "Branding download root url for ${BRANDING_PROJECT_NAME}")
 SET(BRANDING_PROJECT_COMPANYNAME "FastoGT" CACHE STRING "Company name for ${BRANDING_PROJECT_NAME}") #default
 SET(BRANDING_PROJECT_COMPANYNAME_DOMAIN "http://www.fastogt.com" CACHE STRING "Internet domain name company for ${BRANDING_PROJECT_NAME}") #default
 SET(BRANDING_PROJECT_MAINTAINER_MAIL "support@fastogt.com" CACHE STRING "Internet mail address mainteiner of ${BRANDING_PROJECT_NAME}") #default
@@ -54,7 +54,6 @@ SET(CMAKE_C_STANDARD_REQUIRED ON)
 SET(PROJECT_NAME_TITLE ${PROJECT_NAME}) #PROJECT_NAME in cache
 SET(PROJECT_DOMAIN ${BRANDING_PROJECT_DOMAIN})
 SET(PROJECT_DOWNLOAD_LINK ${BRANDING_PROJECT_DOWNLOAD_LINK})
-SET(PROJECT_DOWNLOAD_DIRECT_LINK ${BRANDING_PROJECT_DOWNLOAD_DIRECT_LINK})
 SET(PROJECT_COMPANYNAME ${BRANDING_PROJECT_COMPANYNAME})
 SET(PROJECT_COPYRIGHT ${BRANDING_PROJECT_COPYRIGHT})
 SET(PROJECT_SUMMARY ${BRANDING_PROJECT_SUMMARY})
