@@ -1,5 +1,6 @@
 1.12.0 /
 [Alexandr Topilski]
+- Fixed download links
 
 1.11.0 / November 22, 2017
 [Alexandr Topilski]
